# quad_nmpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
application/: app.cpp  app.h  config.yaml  threadpool.cpp  threadpool.h
control/: FSM.cpp  FSM.h  nmpc_config.yaml  wbc_config.yaml
control/body_optimize/: body_optimization.cpp  body_optimization.h
control/nmpc/acados_cpp_demo/: Gait.cpp  Gait.h  nmpc_caller.cpp  nmpc_caller.h  nmpc_integrator.cpp  nmpc_integrator.h
control/nmpc/acados_python_demo/: main.py  srbd_model.py  srbd_ocp_setting.py
control/wbc/: DynWbc.cpp  DynWbc.hpp  KinWbc.cpp  KinWbc.hpp  WbcCtrl.cpp  WbcCtrl.hpp
control/wbc/TaskContact/: BodyOriTask.cpp  BodyOriTask.hpp  BodyPosTask.cpp  BodyPosTask.hpp  ContactSpec.hpp  LinkPosTask.cpp  LinkPosTask.hpp  SingleContact.cpp  SingleContact.hpp  Task.hpp
estimate/: esti_config.yaml  estimate.cpp  estimate.h  state.h
simulate/: simulate.cc  simulate.h
unitree_a1/: a1.xml  scene.xml  stairs.xml  stairs_1.xml
unitree_a1_desc/urdf/: FL.urdf  FR.urdf  RL.urdf  RR.urdf  a1.urdf
utils/: cppTypes.h  dynamics.cpp  dynamics.hpp  kinematics.cpp  kinematics.h  orientation_tools.cpp  orientation_tools.h  pseudoInverse.cpp  pseudoInverse.h
